# divs-midi-utilities

./: .gitignore  ProjectHome.md  README.md
src/extras/seqer/: .gitignore  CMakeLists.txt  Makefile.unix  Makefile.win32  aftertouch-event.cpp  aftertouch-event.h  all-events-lane.cpp  all-events-lane.h  color.cpp  color.h  colors.cpp  colors.h  configure-mac.sh  configure-msvc.bat  continuous-value-lane.cpp  continuous-value-lane.h  control-change-event.cpp  control-change-event.h  controller-lane.cpp  controller-lane.h  event-list.cpp  event-list.h  event-type-label-lane.cpp  event-type-label-lane.h  event-type.cpp  event-type.h  event-types.cpp  event-types.h  inspector-sidebar.cpp  inspector-sidebar.h  key-signature-event.cpp  key-signature-event.h  label-lane.cpp  label-lane.h  lane.cpp  lane.h  lyric-event.cpp  lyric-event.h  main.cpp  marker-event.cpp  (+59 more)
src/extras/seqer/Seqer.app/Contents/: Info.plist
src/extras/seqer/new-icon/: generate-icons.sh  seqer.xcf
src/extras/seqer/old/1/: EventListView.cpp.bak  ReadMe.txt  Sequencer.clw  StdAfx.h
src/extras/seqer/old/2/: winseqer.rc
src/extras/seqer/old/5/: Makefile.unix  Makefile.win32  application.cpp  application.h  control-change-event.cpp  control-change-lane.cpp  control-change-lane.h  controller-lane.cpp  controller-lane.h  event-type-label-lane.cpp  event-type-label-lane.h  ids.h  inspector-panel.cpp  inspector-panel.h  label-lane.cpp  label-lane.h  label-lane.txt  label.cpp  label.h  lane-properties-dialog.cpp  lane-properties-dialog.h  lane.cpp  lane.h  lyric-event.h  marker-lane.cpp  marker-lane.h  note-event.h  note-lane.cpp  note-lane.h  notes.txt  numeric-value-lane.cpp  numeric-value-lane.h  other-event-lane.cpp  pitch-bend-event.h  seqer.cpp  seqer.h  sequence.cpp  sequence.h  (+10 more)
(+823 files in other folders)
